@@ -1,3 +1,7 @@
+2001-01-14  Alan Modra  <alan@linuxcare.com.au>
+
+	* config/tc-hppa.h (TARGET_FORMAT): Add hppa-linux variants.
+
 2001-01-14  Kazu Hirata  <kazu@hxi.com>
 
 	* config/tc-alpha.c: Fix formatting.
